--- a/data.ipynb
+++ b/data.ipynb
@@ -2,29 +2,174 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "import seaborn\n",
+    "\n",
+    "\n",
+    "sales_df = pd.read_csv('competitive-data-science-predict-future-sales/sales_train.csv')\n",
+    "\n",
+    "\n",
+    "sales_df['date'] = pd.to_datetime(sales_df['date'], format='%d.%m.%Y')\n",
+    "sales_df['year'] = sales_df['date'].dt.year\n",
+    "sales_df['month'] = sales_df['date'].dt.month\n",
+    "first = sales_df.pop('year')\n",
+    "sales_df.insert(0,'year', first)\n",
+    "first = sales_df.pop('month')\n",
+    "sales_df.insert(1,'month', first)\n",
+    "sales_df.drop('date', axis=1, inplace=True)\n",
+    "sales_df.head(-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "Could not find kaggle.json. Make sure it's located in /Users/magnusgreve/.kaggle. Or use the environment method.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mkaggle\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb#ch0000000?line=2'>3</a>\u001b[0m kaggle\u001b[39m.\u001b[39mapi\u001b[39m.\u001b[39mauthenticate()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb#ch0000000?line=4'>5</a>\u001b[0m kaggle\u001b[39m.\u001b[39mapi\u001b[39m.\u001b[39mdataset_download_files(\u001b[39m'\u001b[39m\u001b[39mThe_name_of_the_dataset\u001b[39m\u001b[39m'\u001b[39m, path\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mthe_path_you_want_to_download_the_files_to\u001b[39m\u001b[39m'\u001b[39m, unzip\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/kaggle/__init__.py:23\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkaggle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi_client\u001b[39;00m \u001b[39mimport\u001b[39;00m ApiClient\n\u001b[1;32m     22\u001b[0m api \u001b[39m=\u001b[39m KaggleApi(ApiClient())\n\u001b[0;32m---> 23\u001b[0m api\u001b[39m.\u001b[39;49mauthenticate()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/kaggle/api/kaggle_api_extended.py:164\u001b[0m, in \u001b[0;36mKaggleApi.authenticate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    162\u001b[0m         config_data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread_config_file(config_data)\n\u001b[1;32m    163\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 164\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mCould not find \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m. Make sure it\u001b[39m\u001b[39m\\'\u001b[39;00m\u001b[39ms located in\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    165\u001b[0m                       \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m. Or use the environment method.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m    166\u001b[0m                           \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig_file, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig_dir))\n\u001b[1;32m    168\u001b[0m \u001b[39m# Step 3: load into configuration!\u001b[39;00m\n\u001b[1;32m    169\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_load_config(config_data)\n",
-      "\u001b[0;31mOSError\u001b[0m: Could not find kaggle.json. Make sure it's located in /Users/magnusgreve/.kaggle. Or use the environment method."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4444455066517307 6.852697567092753 0.445986844552136 6.858291440392096\n"
      ]
     }
    ],
    "source": [
-    "import kaggle\n",
     "\n",
-    "kaggle.api.authenticate()\n",
     "\n",
-    "kaggle.api.dataset_download_files('The_name_of_the_dataset', path='the_path_you_want_to_download_the_files_to', unzip=True)\n"
+    "X = sales_df.loc[:,sales_df.columns != 'item_cnt_day']\n",
+    "y = sales_df['item_cnt_day']\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X,y)\n",
+    "pred_y = model.predict(X)\n",
+    "\n",
+    "naive_y = np.full(len(y),np.mean(y))\n",
+    "\n",
+    "print(\n",
+    "mean_absolute_error(y, pred_y),\n",
+    "mean_squared_error(y, pred_y),\n",
+    "\n",
+    "mean_absolute_error(y, naive_y),\n",
+    "mean_squared_error(y, naive_y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'items_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m merge \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mmerge(sales_df, items_df,\u001b[39m'\u001b[39m\u001b[39mleft\u001b[39m\u001b[39m'\u001b[39m, on\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mitem_id\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/magnusgreve/Python/Code/miniprioject_ls/data.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m merge\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'items_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "merge = pd.merge(sales_df, items_df,'left', on='item_id')\n",
+    "merge.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2935849 entries, 0 to 2935848\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column            Dtype         \n",
+      "---  ------            -----         \n",
+      " 0   date              datetime64[ns]\n",
+      " 1   date_block_num    int64         \n",
+      " 2   shop_id           int64         \n",
+      " 3   item_id           int64         \n",
+      " 4   item_price        float64       \n",
+      " 5   item_cnt_day      float64       \n",
+      " 6   item_name         object        \n",
+      " 7   item_category_id  int64         \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(4), object(1)\n",
+      "memory usage: 201.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "merge['date'] = pd.to_datetime(sales_df['date'], format='%d.%m.%Y')\n",
+    "merge.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge['year'] = merge['date'].dt.year\n",
+    "merge['month'] = merge['date'].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first = merge.pop('year')\n",
+    "merge.insert(0,'year', first)\n",
+    "first = merge.pop('month')\n",
+    "merge.insert(1,'month', first)\n",
+    "merge.drop('date', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "MultiIndex: 1586 entries, (2013, 1, 0) to (2015, 10, 59)\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   date_block_num    1586 non-null   int64  \n",
+      " 1   item_id           1586 non-null   int64  \n",
+      " 2   item_price        1586 non-null   float64\n",
+      " 3   item_cnt_day      1586 non-null   float64\n",
+      " 4   item_category_id  1586 non-null   int64  \n",
+      "dtypes: float64(2), int64(3)\n",
+      "memory usage: 67.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "merge = merge.groupby(['year', 'month', 'shop_id']).sum()\n",
+    "merge.info()"
    ]
   },
   {
